chore(panels): fix details collapse

--- a/app/frontend/stylesheets/frontend/partials/metrics.scss
+++ b/app/frontend/stylesheets/frontend/partials/metrics.scss
@@ -56,7 +56,6 @@
   min-height: 70px;
 
   .metrics-value {
-    max-height: 42px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
